--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -8,6 +8,7 @@
 .container {
     width: var(--default-layout-width);
     padding: 0 var(--default-layout-horizontal-spacer);
+    margin-top: var(--default-layout-header-height);
     display: flex;
 }
 .content {
