--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,7 @@
 }
 
 .container {
+    max-width: 100%;
     width: var(--default-layout-width);
     padding: 0 var(--default-layout-horizontal-spacer);
     margin-top: var(--default-layout-header-height);
